--- a/src/global.css
+++ b/src/global.css
@@ -1,48 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Trebuchet+MS:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Century+Gothic:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 body {
   margin: 0;
   line-height: normal;
-}
-:root {
-  /* fonts */
-  --font-century-gothic: "Century Gothic";
-  --font-roboto: Roboto;
-  --font-trebuchet-ms: "Trebuchet MS";
-
-  /* font sizes */
-  --font-size-mid: 17px;
-  --font-size-base: 16px;
-  --font-size-sm: 14px;
-  --font-size-mini: 15px;
-
-  /* Colors */
-  --color-white: #fff;
-  --color-lightseagreen: #15adb7;
-  --color-dimgray-100: #747070;
-  --color-dimgray-200: #6b5e5e;
-  --color-steelblue: #0386d0;
-  --color-silver-100: #d4c5c5;
-  --color-gray: #899095;
-
-  /* Gaps */
-  --gap-3xs: 10px;
-  --gap-13xl: 32px;
-  --gap-52xl: 71px;
-  --gap-5xs: 8px;
-
-  /* Paddings */
-  --padding-xl: 20px;
-  --padding-xs: 12px;
-  --padding-125xl: 144px;
-  --padding-2xs: 11px;
-  --padding-3xs: 10px;
-  --padding-mid: 17px;
-
-  /* border radiuses */
-  --br-11xs: 2px;
-  --br-4xl: 23px;
-  --br-4xs: 9px;
-  --br-9xl: 28px;
 }
