--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Century+Gothic:wght@400&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Century+Gothic:wght@400&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 body {
   margin: 0;
